...
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/lightGray" />

            <ImageView
                android:id="@+id/collapse"
                android:layout_width="27dp"
                android:layout_height="28dp"
                android:layout_marginStart="15dp"
                android:visibility="visible"
                android:focusable="false"
                android:clickable="true"
...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.94"
                android:soundEffectsEnabled="false"
                app:srcCompat="@mipmap/chevron" />

            <ImageView
                android:id="@+id/dashboard"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_marginStart="15dp"
                android:soundEffectsEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13"
                app:srcCompat="@drawable/green_dashboard_2" />

            <ImageView
                android:id="@+id/jobs"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_marginStart="15dp"
                android:soundEffectsEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintVertical_bias="0.19"
                app:srcCompat="@drawable/green_jobs_2"

                />

            <ImageView
                android:id="@+id/equipment"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_marginStart="15dp"
                android:soundEffectsEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.30"
                app:srcCompat="@drawable/green_equipment_2" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_marginStart="15dp"
                android:soundEffectsEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.87"
                app:srcCompat="@drawable/green_logout" />

            <TextView
                android:id="@+id/dashboard_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/nunito"
                android:soundEffectsEnabled="false"
                android:text="Dashboard"
                android:textColor="@color/darkGray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.13" />

            <TextView
                android:id="@+id/jobs_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/nunito"
                android:soundEffectsEnabled="false"
                android:text="Jobs"
                android:textColor="@color/darkGray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.36"
                app:layout_constraintStart_toStartOf="parent"
...
                app:layout_constraintHorizontal_bias="0.68"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.24" />

            <TextView
                android:id="@+id/equipment_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/nunito"
                android:soundEffectsEnabled="false"
                android:text="Equipment"
                android:textColor="@color/darkGray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.30" />

            <TextView
                android:id="@+id/settings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:soundEffectsEnabled="false"
                android:text="Settings"
                android:textColor="@color/darkGray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.87" />


            <TextView
                android:id="@+id/collapse_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:soundEffectsEnabled="false"
                android:text="Collapse"
                android:textColor="@color/lightGray"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
...
